clusters/homelab/apps/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: unifi
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: unifi-insecure@kubernetescrd
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.3.64
  selector:
    app: unifi
  ports:
    - name: inform
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: https-ui
      port: 8443
      targetPort: 8443
      protocol: TCP
    - name: stun
      port: 3478
      targetPort: 3478
      protocol: UDP
    - name: portal-http
      port: 8880
      targetPort: 8880
      protocol: TCP
    - name: portal-https
      port: 8843
      targetPort: 8843
      protocol: TCP
    - name: speedtest
      port: 6789
      targetPort: 6789
      protocol: TCP
